--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -21,7 +21,7 @@ library(shiny)
 
 ```{r load_data}
 #read and clean the data
-nynoaadat <- read_csv("../data/nynoaadat.zip") %>%
+nynoaadat <- read_csv("./data/nynoaadat.csv.zip") %>%
   clean_names() %>% 
   separate(.,date, into = c("year", "month", "day"), sep = "-")
 ```
